# Halide

./: Makefile
apps/: CMakeLists.txt
apps/hist/: Makefile
apps/sca/: CMakeLists.txt  Makefile  README.md  driver.cpp  generate_data.py  graph.py  halide_sca_generator.cpp  halide_sca_tutorial.cpp  hist_generator.cpp  log.txt  metrics.cpp  test.cpp  tutorial_sca_example.cpp  update_metrics.cpp
apps/sca/demo/: Makefile  driver.cpp  halide_sca_tutorial.cpp  metrics.cpp  metrics.h
apps/sca/demo/hist/: hist_driver.cpp
apps/sca/demo/tutorial/: driver.cpp
python_bindings/src/halide/halide_/: PyEnums.cpp  PyGenerator.cpp
src/: AbstractGenerator.h  CMakeLists.txt  Generator.cpp  Generator.h  Lower.cpp  Module.cpp  Module.h  Pipeline.cpp  SymbolicComplexity.cpp  SymbolicComplexity.h  Symbolize.cpp  Symbolize.h  Target.cpp  Target.h
src/runtime/: HalideRuntime.h
test/generator/: abstractgeneratortest_generator.cpp
